@@ -1,4 +1,4 @@
-find_package(ENet 1.3.8)
+find_package(ENet 1.3.9)
 
 if(ENET_FOUND)
     set(ENET_INCLUDE_DIRS ${ENET_INCLUDE_DIR})    
@@ -19,7 +19,7 @@ else(LUA5.2_FOUND)
 endif(LUA5.2_FOUND)
 
 
-#find_package(Boost 1.35.0 COMPONENTS system thread)
+find_package(Boost 1.35.0 COMPONENTS system thread)
 
 if(Boost_FOUND)
     set(BOOST_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
