@@ -1,3 +1,9 @@
+ENet 1.3.9 (August 19, 2013):
+
+* added duplicatePeers option to ENetHost which can limit the number of peers from duplicate IPs
+* added enet_socket_get_option() and ENET_SOCKOPT_ERROR
+* added enet_host_random_seed() platform stub
+
 ENet 1.3.8 (June 2, 2013):
 
 * added enet_linked_version() for checking the linked version 
